--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,5 +1,4 @@
-FROM python:3.11-slim
-
+FROM python:3.12-slim
 WORKDIR /app
 
 COPY requirements.txt .
@@ -7,6 +6,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-WORKDIR /app/api
-
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+EXPOSE 8000
+CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
