--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -1,15 +1,13 @@
-FROM python:3.11-slim
-
+FROM python:3.12-slim
 WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# IMPORTANT: this copies metrics/ and everything else into /app
 COPY . .
 
 WORKDIR /app/streamlit
-
 ENV API_URL=http://api:8000
 
+EXPOSE 8501
 CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
